--- a/Part4.ipynb
+++ b/Part4.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "44695952",
+   "execution_count": 15,
+   "id": "2ec8cf5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9835c31",
+   "id": "5914d095",
    "metadata": {},
    "source": [
     "# Objective"
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f959798",
+   "id": "07ff5939",
    "metadata": {},
    "source": [
     "# Introduction to Stokes' Parameters"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7647cd7",
+   "id": "f1e49b20",
    "metadata": {},
    "source": [
     "## Objective"
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb9db59",
+   "id": "b9977541",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -45,14 +46,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2299ce",
+   "id": "51945faa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4aef7aa5",
+   "id": "75e2acc5",
    "metadata": {},
    "source": [
     "### Experimental set-up"
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3493fbb1",
+   "id": "1e84bceb",
    "metadata": {},
    "source": [
     "We want to study the effect of a 1/4 WP on an incoming SOP. To do this, we want to calculate Stokes' parameters associated with the outgoing beam using the power outputs $P(0,0)$, $P(0,0)$, $P(90,0)$, $P(45,0)$, $P(-45,0)$, $P(-45,-90)$ where $\\psi$ in $P(\\psi, \\epsilon)$ is the angle of the analyser and $\\epsilon$ the phase shift of the $E_y$ field of the SOP after leaving the 1/4 WP. For $\\epsilon = 0$, this means we need the polariser to polarise the laser beam, the 1/2 WP to set the initial angle of the SOP, the 1/4 WP under study and the analyser. To achieve $\\epsilon = -90^ \\circ$, we have to add another 1/4 WP with its fast axis aligned with the x-axis, which comes back to the properties of the 1/4 WP."
@@ -68,17 +69,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0758209e",
+   "id": "ce204a89",
    "metadata": {},
    "source": [
     "### Measurements\n",
     "\n",
-    "We choose SOPs of .... and get:"
+    "We choose SOPs of .... and get:\n",
+    "\n",
+    "ADD TABLE DATA"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "726e0d32",
+   "id": "51b1c074",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -97,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "83e64bf1",
+   "execution_count": 7,
+   "id": "3df40213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee80a6bb",
+   "id": "4d800b08",
    "metadata": {},
    "source": [
     "Now we want to normalise these results by dividing by $S_0$ to get the corresponding normalised values $s_0, s_1, s_2$ and $s_3$ such that $s_0 = 1$, so that the Poincaré sphere has a radius 1 (every point on the surface of the sphere represent a unique SOP, and is therefore a useful geometric visualisation, see figure 12 in the lab script)."
@@ -123,8 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5b321c24",
+   "execution_count": 8,
+   "id": "f84a384b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bed5589",
+   "id": "c2f62076",
    "metadata": {},
    "source": [
     "SHOULD FIND FOR A 45 DEG ANGLE:\n",
@@ -159,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "16c12cef",
+   "execution_count": 9,
+   "id": "1400ee5a",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffb1908",
+   "id": "e3b5abbc",
    "metadata": {},
    "source": [
     "Further, from equation (7) in the lab script,\n",
@@ -197,86 +200,184 @@
     "$$\\begin{align}\n",
     "a &= \\sqrt{\\frac{2s_0}{\\tan(\\chi)}} \\\\\n",
     "b &= a\\tan(\\chi) = \\sqrt{2s_0\\tan(\\chi)}\n",
-    "\\end{align}$$"
+    "\\end{align}$$\n",
+    "\n",
+    "We can replace $s_0$ by 1, as it is defined like that by the normalisation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "7508a41a",
+   "execution_count": 14,
+   "id": "ab2e59b9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.9999999999999999\n",
       "We then have that a = 1.4142135623730951 and b = 1.414213562373095\n"
      ]
     }
    ],
    "source": [
-    "print(np.tan(chi))\n",
-    "a = np.sqrt(abs(2*s0/np.tan(chi)))\n",
-    "b = np.sqrt(abs(2*s0*np.tan(chi)))\n",
+    "a = np.sqrt(abs(2*1/np.tan(chi)))\n",
+    "b = np.sqrt(abs(2*1*np.tan(chi)))\n",
     "\n",
     "print('We then have that a = {0} and b = {1}'.format(a,b))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd2b3b92",
+   "id": "fb92ca29",
    "metadata": {},
    "source": [
-    "This is for whoever runs this code. To avoid coppying and pasting for each SOP, a good thing is to do a loop, like so"
+    "This is for whoever runs this code. To avoid coppying and pasting for each SOP, we can first define a series of functions to calculate Stokes' parameters, the angles on the Poincare sphere and the axes of the SOP:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b1ab9ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2979702625.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2898220/2979702625.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    S0 = #P(0,0) array + P(90, 0) array\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Stokes_parameters(P0_0, P90_0, P45_0, Pm45_0, P45_m90, Pm45_m90):\n",
+    "    \"Inputs are powers needed to calculate Stokes parameters, output is Stokes parameters\"\n",
+    "         #P0_0 is P(0,0), P90_0 is P(90, 0), P45_0 is P(45, 0), Pm45_0 is P(-45, 0), P45_m90 is P(45, -90) and Pm45_m90 is P(-45, -90)\n",
+    "    S0 = P0_0    + P90_0\n",
+    "    S1 = P0_0    - P90_0\n",
+    "    S2 = P45_0   - Pm45_0\n",
+    "    S3 = P45_m90 - Pm45_m90\n",
+    "    return(S0, S1, S2, S3)\n",
+    "\n",
+    "def angles_from_stokes(S0, S1, S2, S3):\n",
+    "    \"normalises stokes parameters and calculates angles psi and chi on the Poincare sphere, and angle delta\"\n",
+    "    \n",
+    "    #normalising stokes parameters\n",
+    "    s0, s1, s2, s3 = [S0, S1, S2, S3]*np.ones_like(4)*(1/S0)\n",
+    "    \n",
+    "    #angle calculation\n",
+    "    psi   = np.arctan2(s2, s1)/2\n",
+    "    chi   = np.arcsin(s3/s0) /2\n",
+    "    delta = np.arctan2(s3, s2)\n",
+    "    \n",
+    "    return(psi, chi, delta)\n",
+    "\n",
+    "def SOP_axes(chi):\n",
+    "    \"calculates the semi-major and semi-minor axes, a and b, of the SOP from angle chi on the Poincare sphere\"\n",
+    "    a = np.sqrt(abs(2*1/np.tan(chi)))\n",
+    "    b = np.sqrt(abs(2*1*np.tan(chi)))\n",
+    "    return(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b688015",
+   "metadata": {},
+   "source": [
+    "We can then calculate $\\delta$, $\\phi$, $\\chi$, $a$ and $b$ for our 45 deg initial SOP by looping over our set of measurements, taking the average and calculating the standard error on the mean.\n",
+    "\n",
+    "The lab script also asked for $a/b$ and $E_x/E_y$. The latter will be the square root of $P(0, 0)/P(90, 0)$. The error on first one is easily calculated by error propagation:\n",
+    "\n",
+    "$$\\sigma(b/a) = \\frac{b}{a}\\sqrt{\\left(\\frac{\\sigma(a)}{a} \\right)^2 + \\left(\\frac{\\sigma(b)}{b} \\right)^2}$$\n",
+    "\n",
+    "The second one is a bit more complicated, but still doable:\n",
+    "\n",
+    "$$\\sigma(E_x/E_y) = \\frac{1}{2} \\left(\\frac{E_x}{E_y}\\right)^{-1/2} \\sigma(P(0,0)/P(90,0))$$\n",
+    "\n",
+    "as $E_x/E_y = [P(0,0)/P(90,0)]^{1/2}$.\n",
+    "\n",
+    "The errors $\\sigma(a)$, $\\sigma(b)$ can $\\sigma(P(0,0)/P(90,0))$ be calculated by taking the standard error on the mean for each of these values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32de86f",
+   "id": "ce00493e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "S0 = #P(0,0) array + P(90, 0) array\n",
-    "S1 = #P(0,0) array - P(90, 0) array\n",
-    "S2 = #P(45,0) array - P(-45, 0) array\n",
-    "S3 = #P(45,-90) array - P(-45, -90) array\n",
+    "background = \n",
     "\n",
-    "#S0, S1, S2 and S3 will be arrays, no need for a loop\n",
+    "#load data for 45 deg angle\n",
+    "P45 = np.loadtxt('???')\n",
     "\n",
-    "#define the arrays you will need to append\n",
-    "array_a = []\n",
-    "array_b = []\n",
-    "array_chi = []\n",
-    "array_psi = []\n",
-    "array_delta = []\n",
+    "P45b = P45 - np.ones_like(??)*background #subtract background\n",
     "\n",
-    "for i, S in enumerate(S0):\n",
-    "    s0, s1, s2, s3 = [S0[i], S1[i], S2[i], S3[i]]*(1/S0[i])\n",
-    "    # you can print this to check its consistent\n",
-    "    \n",
-    "    psi   = np.arctan2(s2, s1)/2\n",
-    "    chi   = np.arcsin(s3/s0) /2\n",
-    "    delta = np.arctan2(s3, s2)\n",
-    "    print('We then have psi = {0}, chi = {1} and delta = {2} for SOP of angle (add the angle of the SOP here using format)'.format(psi, chi, delta))\n",
-    "    \n",
-    "    array_psi.append(psi)\n",
-    "    array_chi.append(chi)\n",
-    "    array_delta.append(delta)\n",
-    "    \n",
-    "    a = np.sqrt(2*s0/np.tan(chi))\n",
-    "    b = np.sqrt(2*s0*np.tan(chi))\n",
+    "#Stokes parameters for 45 deg angle\n",
+    "S0, S1, S2, S3 = Stokes_parameters(P45b[0], P45b[1], P45b[2], P45b[3], P45b[4], P45b[5])\n",
     "\n",
-    "    print('We then have that a = {0} and b = {1} for SOP of angle (add the angle of the SOP here using format)'.format(a,b))\n",
-    "    \n",
-    "    array_a.append(a)\n",
-    "    array_b.append(b)"
+    "print()\n",
+    "\n",
+    "#calculate angles\n",
+    "psi, chi, delta = angles_from_stokes(S0, S1, S2, S3)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "#calculate semi-major and semi-minor axes\n",
+    "a, b = SOP_axes(chi)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "#calculating averages\n",
+    "\n",
+    "psi_av   = np.average(psi)\n",
+    "chi_av   = np.average(chi)\n",
+    "delta_av = np.average(delta)\n",
+    "a_av     = np.average(a)\n",
+    "b_av     = np.average(b)\n",
+    "\n",
+    "#corresponding standard errors\n",
+    "\n",
+    "psi_e   = stats.sem(psi)\n",
+    "chi_e   = stats.sem(chi)\n",
+    "delta_e = stats.sem(delta)\n",
+    "a_e     = stats.sem(a)\n",
+    "b_e     = stats.sem(b)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "#also wanted b/a\n",
+    "\n",
+    "a_b  = a_av/b_av\n",
+    "\n",
+    "#error from error propagation will be\n",
+    "\n",
+    "a_be = a_b * np.sqrt((a_e/a_av)**2+(b_e/b_av)**2)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "#and finally want E_x/E_y\n",
+    "\n",
+    "Pxy_av = np.average(P45b[0]/P45b[1])    #first calculate the average power output between x and y axis\n",
+    "Pxy_e  = stats.sem(P45b[0]/P45b[1])     #calculate error on the average\n",
+    "\n",
+    "E_xy   = np.sqrt(Pxy_av)              #calculate electric field component\n",
+    "E_xye  = 0.5*E_xy**(-0.5)*Pxy_e       #calculate error by error propagation\n",
+    "\n",
+    "print()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84144e43",
+   "id": "0119db52",
+   "metadata": {},
+   "source": [
+    "We can do the same for the other angles (I did the same code but in a different notebook to save some space), and tabulate the data:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "905eeb93",
    "metadata": {},
    "source": [
     "You can then tabulate the values as described in the lab script."
@@ -284,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6e9f17",
+   "id": "8435918b",
    "metadata": {},
    "source": [
     "# Using Stokes' Parameters"
@@ -292,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a59897c",
+   "id": "88767c77",
    "metadata": {},
    "source": [
     "## Objective"
@@ -300,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67fb5408",
+   "id": "fb687f08",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -308,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bf33e2",
+   "id": "05c80410",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -318,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebd0746",
+   "id": "2ed6e4fd",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -350,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b845370",
+   "id": "aee762f3",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -361,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bd6fda",
+   "id": "d7444612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43906604",
+   "id": "bbaa0182",
    "metadata": {},
    "source": [
     "Which we can then use to calculate $\\chi$, $\\psi$, $\\delta$, $a$ and $b$."
@@ -389,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a077e32d",
+   "id": "7c2eaaf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0112ec38",
+   "id": "324aed9b",
    "metadata": {},
    "source": [
     "Which we can tabulate:"
@@ -432,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931e9cb6",
+   "id": "576a8caa",
    "metadata": {},
    "source": [
     "# Investigation of strain birefringence"
@@ -440,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749f2c04",
+   "id": "5a7fd90c",
    "metadata": {},
    "source": [
     "## Objective"
@@ -448,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198e8d88",
+   "id": "2d82e6b8",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -456,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ec04d8",
+   "id": "e7210213",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -466,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b9c96f",
+   "id": "106f30b7",
    "metadata": {},
    "source": [
     "### Measurements"
@@ -474,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25943385",
+   "id": "4f645925",
    "metadata": {},
    "source": [
     "## Data analysis"
@@ -483,14 +584,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2782d9",
+   "id": "f172178a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "913163ea",
+   "id": "b04d069f",
    "metadata": {},
    "source": [
     "# Discussion\n",
