--- a/Part4.ipynb
+++ b/Part4.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2ec8cf5b",
+   "execution_count": 3,
+   "id": "aff8a892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5914d095",
+   "id": "d9642fe4",
    "metadata": {},
    "source": [
     "# Objective"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07ff5939",
+   "id": "8aafc856",
    "metadata": {},
    "source": [
     "# Introduction to Stokes' Parameters"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e49b20",
+   "id": "935be9f3",
    "metadata": {},
    "source": [
     "## Objective"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9977541",
+   "id": "ae3e1f29",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -46,14 +46,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51945faa",
+   "id": "b09a4b93",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "75e2acc5",
+   "id": "e5c2aff0",
    "metadata": {},
    "source": [
     "### Experimental set-up"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e84bceb",
+   "id": "9e209716",
    "metadata": {},
    "source": [
     "We want to study the effect of a 1/4 WP on an incoming SOP. To do this, we want to calculate Stokes' parameters associated with the outgoing beam using the power outputs $P(0,0)$, $P(0,0)$, $P(90,0)$, $P(45,0)$, $P(-45,0)$, $P(-45,-90)$ where $\\psi$ in $P(\\psi, \\epsilon)$ is the angle of the analyser and $\\epsilon$ the phase shift of the $E_y$ field of the SOP after leaving the 1/4 WP. For $\\epsilon = 0$, this means we need the polariser to polarise the laser beam, the 1/2 WP to set the initial angle of the SOP, the 1/4 WP under study and the analyser. To achieve $\\epsilon = -90^ \\circ$, we have to add another 1/4 WP with its fast axis aligned with the x-axis, which comes back to the properties of the 1/4 WP."
@@ -69,10 +69,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce204a89",
+   "id": "db92e12d",
    "metadata": {},
    "source": [
     "### Measurements\n",
+    "\n",
+    "Creation of circularly polarised light for 45 deg angle: best I could do was 389 to 405 power output\n",
     "\n",
     "We choose SOPs of .... and get:\n",
     "\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b1c074",
+   "id": "e0b7de64",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -100,25 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3df40213",
+   "execution_count": 30,
+   "id": "23433b52",
    "metadata": {},
    "outputs": [],
    "source": [
     "#subtract background\n",
     "#measurement - background\n",
-    "#also do mean measurements and stuff if applicable\n",
+    "#TRIAL FOR 1st set, to explain better\n",
     "\n",
-    "#now calculate Stoke's parameters\n",
-    "S0 = #P(0,0) + P(90, 0)\n",
-    "S1 = #P(0,0) - P(90, 0)\n",
-    "S2 = #P(45,0) - P(-45, 0)\n",
-    "S3 = #P(45,-90) - P(-45, -90)"
+    "#now calculate Stoke's parameters ()\n",
+    "S0 = (397-3) + (397-3)\n",
+    "S1 = (397-3) - (397-3)\n",
+    "S2 = (405-3) - (391-3)\n",
+    "S3 = (3-3)   - (766-3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d800b08",
+   "id": "86ca629a",
    "metadata": {},
    "source": [
     "Now we want to normalise these results by dividing by $S_0$ to get the corresponding normalised values $s_0, s_1, s_2$ and $s_3$ such that $s_0 = 1$, so that the Poincaré sphere has a radius 1 (every point on the surface of the sphere represent a unique SOP, and is therefore a useful geometric visualisation, see figure 12 in the lab script)."
@@ -126,21 +128,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f84a384b",
+   "execution_count": 31,
+   "id": "0b6e656a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999999999999999 0.0 0.017766497461928932 -0.9682741116751268\n"
+     ]
+    }
+   ],
    "source": [
-    "s0, s1, s2, s3 = [S0, S1, S2, S3]*np.ones_like(4)*(1/S0)"
+    "s0, s1, s2, s3 = [S0, S1, S2, S3]*np.ones_like(4)*(1/S0)\n",
+    "\n",
+    "print(s0, s1, s2, s3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2f62076",
+   "id": "8abb8dae",
    "metadata": {},
    "source": [
-    "SHOULD FIND FOR A 45 DEG ANGLE:\n",
-    "Here, we see that $s_0 = 1 \\approx s_3$ and $s_1 \\approx s_2 \\approx 0$. This means the SOP is at the 'north pole' of the sphere, and so $\\delta = 90^\\circ$, meaning this is right circularly polarised light. This agrees with the fact that 1/4 WP turn a 45° SOP into right circularly polarised light. This also means we would expect $a=b$, $\\psi = 0$ and $\\chi = 45^\\circ$.\n",
+    "((SHOULD FIND FOR A 45 DEG ANGLE:\n",
+    "Here, we see that $s_0 = 1 \\approx s_3$ and $s_1 \\approx s_2 \\approx 0$. This means the SOP is at the 'north pole' of the sphere, and so $\\delta = 90^\\circ$, meaning this is right circularly polarised light. This agrees with the fact that 1/4 WP turn a 45° SOP into right circularly polarised light. This also means we would expect $a=b$, $\\psi = ???$ and $\\chi = 45^\\circ$.)) REWRITE TO MATCH OBSERVATIONS\n",
+    "\n",
+    "But this is not what we find. This is because, although the SOP leaves the 1/2 WP at 45 deg from the x axis, it is actually at -45 deg to the 1/4 WP ADD EITHER EXPLANATIONS OR DIAGRAM. Meaning we have left circularly polarised light\n",
     "\n",
     "From the Poincare sphere in figure 12, we see that\n",
     "$$\\tan(2\\psi) = s_2/s_1$$\n",
@@ -162,15 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1400ee5a",
+   "execution_count": 34,
+   "id": "13c08006",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We then have psi = 0.0, chi = 45.0 and delta = 90.0\n"
+      "We then have psi = 45.0, chi = -37.76448470744911 and delta = -88.94881925045625\n"
      ]
     }
    ],
@@ -184,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b5abbc",
+   "id": "35f26923",
    "metadata": {},
    "source": [
     "Further, from equation (7) in the lab script,\n",
@@ -207,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ab2e59b9",
+   "execution_count": 35,
+   "id": "4e337713",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We then have that a = 1.4142135623730951 and b = 1.414213562373095\n"
+      "We then have that a = 1.6067629732158333 and b = 1.244738666087835\n"
      ]
     }
    ],
@@ -228,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb92ca29",
+   "id": "77df2907",
    "metadata": {},
    "source": [
     "This is for whoever runs this code. To avoid coppying and pasting for each SOP, we can first define a series of functions to calculate Stokes' parameters, the angles on the Poincare sphere and the axes of the SOP:"
@@ -236,19 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b1ab9ccd",
+   "execution_count": 36,
+   "id": "f7b59db0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2979702625.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2898220/2979702625.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    S0 = #P(0,0) array + P(90, 0) array\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def Stokes_parameters(P0_0, P90_0, P45_0, Pm45_0, P45_m90, Pm45_m90):\n",
     "    \"Inputs are powers needed to calculate Stokes parameters, output is Stokes parameters\"\n",
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b688015",
+   "id": "296351ec",
    "metadata": {},
    "source": [
     "We can then calculate $\\delta$, $\\phi$, $\\chi$, $a$ and $b$ for our 45 deg initial SOP by looping over our set of measurements, taking the average and calculating the standard error on the mean.\n",
@@ -301,17 +306,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce00493e",
+   "execution_count": 48,
+   "id": "4b90a862",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[397. 402. 402.]\n",
+      " [397. 403. 403.]\n",
+      " [405. 415. 416.]\n",
+      " [391. 393. 394.]\n",
+      " [  3.   2.   2.]\n",
+      " [766. 771. 768.]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "background = \n",
+    "background = 3\n",
     "\n",
     "#load data for 45 deg angle\n",
-    "P45 = np.loadtxt('???')\n",
+    "P45 = np.loadtxt('measurements 5.2.1 - 45 deg.tsv', skiprows = 3, usecols = (1,2,3))\n",
     "\n",
-    "P45b = P45 - np.ones_like(??)*background #subtract background\n",
+    "#subtract background\n",
+    "P45b = P45 - background\n",
+    "\n",
     "\n",
     "#Stokes parameters for 45 deg angle\n",
     "S0, S1, S2, S3 = Stokes_parameters(P45b[0], P45b[1], P45b[2], P45b[3], P45b[4], P45b[5])\n",
@@ -364,12 +390,14 @@
     "E_xy   = np.sqrt(Pxy_av)              #calculate electric field component\n",
     "E_xye  = 0.5*E_xy**(-0.5)*Pxy_e       #calculate error by error propagation\n",
     "\n",
-    "print()"
+    "print()\n",
+    "\n",
+    "#PRINT AN"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0119db52",
+   "id": "f4486885",
    "metadata": {},
    "source": [
     "We can do the same for the other angles (I did the same code but in a different notebook to save some space), and tabulate the data:"
@@ -377,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905eeb93",
+   "id": "97e14dc1",
    "metadata": {},
    "source": [
     "You can then tabulate the values as described in the lab script."
@@ -385,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8435918b",
+   "id": "1267b7d9",
    "metadata": {},
    "source": [
     "# Using Stokes' Parameters"
@@ -393,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88767c77",
+   "id": "58efc7d7",
    "metadata": {},
    "source": [
     "## Objective"
@@ -401,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb687f08",
+   "id": "f769c0ac",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -409,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c80410",
+   "id": "09a06ad9",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -419,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed6e4fd",
+   "id": "f4e4dcec",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -451,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee762f3",
+   "id": "b222ae1c",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -462,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7444612",
+   "id": "a559427f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbaa0182",
+   "id": "184811b4",
    "metadata": {},
    "source": [
     "Which we can then use to calculate $\\chi$, $\\psi$, $\\delta$, $a$ and $b$."
@@ -490,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c2eaaf4",
+   "id": "5f43a7c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "324aed9b",
+   "id": "05f2a28a",
    "metadata": {},
    "source": [
     "Which we can tabulate:"
@@ -533,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576a8caa",
+   "id": "9aa378a3",
    "metadata": {},
    "source": [
     "# Investigation of strain birefringence"
@@ -541,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7fd90c",
+   "id": "98d96345",
    "metadata": {},
    "source": [
     "## Objective"
@@ -549,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d82e6b8",
+   "id": "fd817cbd",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -557,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7210213",
+   "id": "e53319d7",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -567,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106f30b7",
+   "id": "0000ea91",
    "metadata": {},
    "source": [
     "### Measurements"
@@ -575,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f645925",
+   "id": "9a56c1f5",
    "metadata": {},
    "source": [
     "## Data analysis"
@@ -584,14 +612,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f172178a",
+   "id": "ad820e10",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b04d069f",
+   "id": "05273e2c",
    "metadata": {},
    "source": [
     "# Discussion\n",
@@ -615,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
