--- a/Part4.ipynb
+++ b/Part4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "43a53061",
+   "id": "0b551095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e17203ef",
+   "id": "49e37932",
    "metadata": {},
    "source": [
     "# Objective\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488820e5",
+   "id": "a971b68b",
    "metadata": {},
    "source": [
     "# Introduction to Stokes' Parameters"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416f445e",
+   "id": "cc3ebe9e",
    "metadata": {},
    "source": [
     "## Objective\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed725f7",
+   "id": "d4e23728",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113326a5",
+   "id": "fa248f4b",
    "metadata": {},
    "source": [
     "### Experimental set-up"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb808f3",
+   "id": "9767f6f3",
    "metadata": {},
    "source": [
     "We want to study the effect of a 1/4 WP on an incoming SOP. To do this, we want to calculate Stokes' parameters associated with the outgoing beam using the power outputs $P(0,0)$, $P(0,0)$, $P(90,0)$, $P(45,0)$, $P(-45,0)$, $P(-45,-90)$ where $\\psi$ in $P(\\psi, \\epsilon)$ is the angle of the analyser, and $\\epsilon$ is the phase shift of the $E_y$ coponent of the SOP after leaving the 1/4 WP.\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e34a7df",
+   "id": "a4f79008",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ad85a1",
+   "id": "90e6c790",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "678d42c3",
+   "id": "d62d1789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fc0585",
+   "id": "45e515b3",
    "metadata": {},
    "source": [
     "Now we want to normalise these results by dividing by $S_0$ to get the corresponding normalised values $s_0, s_1, s_2$ and $s_3$ such that $s_0 = 1$. This will mean the Poincaré sphere has a radius 1 (every point on the surface of the sphere represent a unique SOP, and is therefore a useful geometric visualisation, see figure 12 in the lab script)."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4bdfe649",
+   "id": "e5b310c6",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb26fa39",
+   "id": "45a70144",
    "metadata": {},
    "source": [
     "For a 45&deg; angle, I should have found $s_0 = 1 \\approx s_3$ and $s_1 \\approx s_2 \\approx 0$, which would be right circularly polarised light. However, here $s_0 = 1 \\approx - s_3$ and $s_1 \\approx s_2 \\approx 0$, which are the expected values for left circularly polarised light. This is because the angle of the SOP with respect to the transmission axis of the 1/4 WP was in fact **-45&deg;**. This is easily seen visually, but I don't have time to draw a diagram. This also means we have to take the opposites of all the angles in table 1.\n",
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "cc870fa3",
+   "id": "9e3dd173",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde8e35c",
+   "id": "bde216a7",
    "metadata": {},
    "source": [
     "$\\delta$ is very close to what we expected (1% difference). $\\chi$ is further away than what was expected (by 17 %), which will mean the value for b/a will also be. There is a big error here because the gradient of the $\\arcsin(x)$ function is very steep at 1, and so it is very sensitive to small deviations (the difference between the expected value of -1 for $s_3/s_0$ and the measured value of -0.97 is only 3%). $\\psi$ is equal to 45 &deg; here because $s_1 = 0$ exactly.\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "fb511b58",
+   "id": "ac4616de",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80b2e9c",
+   "id": "cff7c08f",
    "metadata": {},
    "source": [
     "This is quite far from what was expected, but logical, as $\\chi$, the only angle on which a and b are dependent, has the most error.\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "6be956f4",
+   "id": "61efc0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed92b5be",
+   "id": "029f779d",
    "metadata": {},
    "source": [
     "We can then calculate $\\delta$, $\\phi$, $\\chi$, $a$ and $b$ for our 45&deg; initial SOP (-45&deg; incidence to 1/4 WP) by looping over our set of measurements, using the above definitions. We can then take the average and calculate the standard error on the mean.\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "6dda690a",
+   "id": "92277608",
    "metadata": {},
    "outputs": [
     {
@@ -431,28 +431,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd343dc",
+   "id": "ecd6a4ef",
    "metadata": {},
    "source": [
-    "We can do the same for all the other angles (ie, doing the same )"
+    "We can do the same for all the other angles (ie, doing the same code, which is not here because it would take too much space), and the results we found are tabulated in the Results section."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0de79b18",
+   "id": "bfc86b36",
    "metadata": {},
    "source": [
-    "You can then tabulate the values as described in the lab script."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c7a53cc",
-   "metadata": {},
-   "source": [
-    "## Results\n",
+    "## Results & discussion\n",
     "\n",
-    "We then get, for each SOP incident on the 1/4 WP under study:\n",
+    "Finally, we get for each SOP incident on the 1/4 WP under study:\n",
     "\n",
     "SOP incident on 1/4 WP | $\\psi$ | $\\chi$ | $\\delta$ | a | b | $b/a$ | $E_x/E_y$\n",
     ":-------:|:---------------------:|:-------------------:|:--------------------:|:------------------:|:-----------------:|:-----------------:|:-------------------:\n",
@@ -461,12 +453,23 @@
     "-20&deg; | $1.188 \\pm 0.002$     | $-17.866 \\pm 0.001$ | $-86.892 \\pm 0.004$  | $1.3460 \\pm 0.004$ | $0.434 \\pm 0.001$ | $0.322 \\pm 0.001$ | $2.74 \\pm 0.02$\n",
     "60&deg;  | $-87.7818 \\pm 0.0002$ | $28.728 \\pm 0.004$  | $92.597 \\pm 0.001$   | $1.240 \\pm 0.003$  | $0.680 \\pm 0.005$ | $0.548 \\pm 0.004$ | $0.583 \\pm 0.004$\n",
     "\n",
+    "Firstly, all the erors for $\\delta$ are consistent with the fact that we are studying a 1/4 WP, as their absolute value is similar to $90^\\circ$. Which is the phase difference between the orthogonal components of the SOP. However, the values calculated for 45 and -45&deg; are much closer to the real value ($\\approx 2 \\%$ difference), while the other two are further away ($\\approx 3 \\%$ difference), this is not much, but nevertheless indicates that the way we set the $\\pm 45$ SOPs (using the method in paragraph 4) is more precise that setting the 1/2 WP at half the desired angle, as we can get a precision of less than a degree.\n",
+    "\n",
+    "**For the 45° angle**: $\\psi$ should be undefined, as discussed earlier. However, our values are not perfect, and so it gives back an angle. This is ok, because it indicates that $|s_1| \\approx |s_2|$ (which should both equal 0 in a perfect situation). $\\chi$ should equal 45° here, as this is right circularly polarised light, which gives a large difference of 15% with the measured value. The gradient of $\\arctan(x)$ is very steep at 1, its expected value, which means the function is very sensitive to small deviations there. This propagates to our value of $a/b$, which is quite distant from its expected value of 1 for circularly polarised light (more than 20%). However, $E_x/E_y = 1$, as expected.\n",
+    "\n",
+    "**For the -45° angle**: The same things can be said for this angle, and most of it has already been discussed in the Data Analysis part. Something to note is that $E_x/E_y = 1$, as expected.\n",
+    "\n",
+    "**For the -20° angle**: $\\psi$, the angle of orientation, is very small, which indicates that the long axis is nearly aligned with the x-axis, which is what I would expect for small angles. Further, $\\chi$ and $\\delta$ are negative, which indicates that the beam rotates to the left, which is consistent with the fact that this angle is negative. Finally, $b/a$ is quite close to 0.5. This is because we're about halfway between circularly polarised anf linearly polarised light (which would have $b/a = 0$), and so the ratio between the two axes of the ellipse would be 0.5\n",
+    "\n",
+    "**For the 60° angle**: $\\psi$ is nearly 90°. This may be because we are approaching a 90° angle, where linearly polarised light *perpendicular* to the x-axis is created. $\\chi$ and $\\delta$ are positive, which indicates that the beam rotates to the right, which is consistent with the fact that this angle is positive. $b/a$ is closer to 1 than it is to 0.5, which is consistent with the fact that $60 < \n",
+    "\n",
+    "\n",
     "Logical that b/a has the most error because it's dependent on chi, which is the furthest away from the value we're looking for. GO THROUGH EACH OF THEM"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d00ed3c",
+   "id": "a644e6cb",
    "metadata": {},
    "source": [
     "# Using Stokes' Parameters"
@@ -474,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723d8174",
+   "id": "e65a7001",
    "metadata": {},
    "source": [
     "## Objective"
@@ -482,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b8ef296",
+   "id": "c19f3ac5",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -490,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8fcdd31",
+   "id": "c5b71e84",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -500,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ab778c",
+   "id": "09b2ad03",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f23c26",
+   "id": "1cc55d75",
    "metadata": {},
    "source": [
     "## Data analysis\n",
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8044f49",
+   "id": "308de7b5",
    "metadata": {},
    "source": [
     "# Results\n",
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e90640c",
+   "id": "57571e16",
    "metadata": {},
    "source": [
     "# Investigation of strain birefringence"
@@ -582,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f215be",
+   "id": "b72068f5",
    "metadata": {},
    "source": [
     "## Objective"
@@ -590,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d3a4f51",
+   "id": "4e4b6e37",
    "metadata": {},
    "source": [
     "## Experimental Method"
@@ -598,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586d4feb",
+   "id": "74a1fb21",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -608,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98c5591",
+   "id": "e216070f",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -624,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46b30965",
+   "id": "0a57f754",
    "metadata": {},
    "source": [
     "## Data analysis"
@@ -633,14 +636,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbdf5bbf",
+   "id": "f303d6b8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f7f39d70",
+   "id": "39d4e24d",
    "metadata": {},
    "source": [
     "# Discussion\n",
